tests/baselines/reference/indexSignatureTypeCheck.errors.txt
==== tests/cases/compiler/indexSignatureTypeCheck.ts (8 errors) ====
    interface IPropertySet {
    
        [index: string]: any;
    
    }
    
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    
    interface indexErrors {
        [p2?: string];
        [...p3: any[]];
        [p4: string, p5?: string];
                   ~
!!! indexSignatureTypeCheck.ts(16,16): error TS1005: ']' expected.
                                ~
!!! indexSignatureTypeCheck.ts(16,29): error TS1005: ';' expected.
                                 ~
!!! indexSignatureTypeCheck.ts(16,30): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! indexSignatureTypeCheck.ts(16,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	indexSignatureTypeCheck.ts(14,5)
        [p6: string, ...p7: any[]];
                   ~
!!! indexSignatureTypeCheck.ts(17,16): error TS1005: ']' expected.
                     ~~~
!!! indexSignatureTypeCheck.ts(17,18): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
                                 ~
!!! indexSignatureTypeCheck.ts(17,30): error TS1005: ';' expected.
                                  ~
!!! indexSignatureTypeCheck.ts(17,31): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }